# zero_cost_serialization

./: CMakeLists.txt  README.md
clang/zero_cost_serialization/detail/: warning.h
compiler/zero_cost_serialization/detail/: warning.h
examples/: simple_rpc.cpp
include/zero_cost_serialization/: apply.h  bitfield.h  constraint.h  generated.h  interchange_float.h  invoke.h  list.h  map.h  nullable_resource.h  reinterpret_memory.h  scope_guard.h  serializable.h  strict_alias.h
include/zero_cost_serialization/detail/: error.h  link.h
msvc/zero_cost_serialization/detail/: warning.h
platform/zero_cost_serialization/detail/: platform.h
tests/: tests.cpp
tools/: codegen.cpp
windows/zero_cost_serialization/detail/: platform.h
